Completed the secondary webpages

--- a/Course.html
+++ b/Course.html
@@ -1,22 +1,242 @@
-• Zero Shot Learning in Scene Graph Generation Advanced Machine Learning , Spring 2019
-Extended the Scene Graph generation to infinite vocabulary predicate by predicting the target
-word-embeddings which can then be mapped to the closest word in the Embedding space.
-• VQA : A CS763 Odyssey Computer Vision , Spring 2019
-Worked on the existing Visual Question Answering using Deep Learning approach, adding improved
-Word Embeddings and a side classifier to switch between modules for YES/NO answers and normal
-answers.
-• EDGE: Efficient Digital Grading Environment Database and Information Systems , Autumn 2018
-End to End solution for Exam Conduction which given text by instructor, generates question paper in
-LateX , assign scanned papers to Teaching Assistant for evaluation and provides scores to students.
-• SPSIM: Superscalar Processor Simulator Computer Architecture , Autumn 2018
-Built a MIPS Code Simulator from scratch in C++ following a real superscalar microprocessor architecture
-adding features such as Out-of-order Execution and multiple Processing units for faster execution.
-• Transfer Learning for Image Prior Medical Image Computing , Spring 2018
-◦ Used ideas of Neural Style Transfer to generate image prior for denoising.
-◦ Implemented method of Dictionary transfer for image denoising using K-SVD and matching pursuit.
-• Railway Signalling Controller Digital Logic Design , Spring 2018
-Programmed a Spartan FPGA Board in VHDL to work as a railway signalling controller along with
-encrypting the communication between the boards.
-• GetSchedGo Software Systems Laboratory, Autumn 2017
-Developed a web time table scheduling application using Django with personalisations like events
-suggestion, smart scheduling, course based events and syncing the result with the Google Calendar.
+<!DOCTYPE HTML>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Course Projects and Self Projects</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="Interactive CV of Rupesh" />
+      <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
+      <meta name="author" content="Rupesh" />
+      <!--Social Media icons--> 
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+      <link rel="icon" type="image/png" href="https://rupesh.info/assets/img/favicon.png">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+      <!-- Animate.css -->
+      <link rel="stylesheet" href="css/animate.css">
+      <!-- Bootstrap  -->
+      <link rel="stylesheet" href="css/bootstrap.css">
+      <!-- Flexslider  -->
+      <link rel="stylesheet" href="css/flexslider.css">
+      <!-- Flaticons  -->
+      <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+      <!-- Theme style  -->
+      <link rel="stylesheet" href="css/style.css">
+      <!-- Modernizr JS -->
+      <script src="js/modernizr-2.6.2.min.js"></script>
+       
+       <!--   Google Adsense -->
+<script data-ad-client="ca-pub-5327947672777463" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+   
+</script>
+<!--   End ad -->
+
+
+  
+<!-- Google Analytics -->
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+  ga('create', 'UA-147852058-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+</head>
+
+<body>
+  <canvas id="canvas"></canvas>
+  <div id="colorlib-page">
+    <div class="container-wrap">
+        <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
+        <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
+           <div class="text-center">
+              <div class="author-img" style="background-image: url(https://rupesh.info/assets/img/profil-smallest.png);">
+              </div>
+              <h1 id="colorlib-logo"><a href="https://rupesh.info/webCV">Rupesh</a></h1>
+              <p><strong>Course Projects and Self Projects</strong></p>
+           </div>
+        </aside>
+        <div id="colorlib-main">
+          <section class="colorlib-about" data-section="about">
+            <div class="colorlib-narrow-content">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+                    <div class="col-md-12">
+                      <div class="about-desc">
+                        <h2>Course Projects and Self Projects</h2>
+                        <hr>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3"><a href="https://github.com/rs9899/cv2_plt_imshow">CV2-plt-imshow</a></h4>
+                                  Created a PyPi package to handle the use cases of pyplot based ploting on images generated or read by CV2
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3"><a href="https://github.com/rs9899/Video-Bokeh-Effect/">Video-Bokeh-Effect</a></h4>
+                                  Applied disc blur along with gamma correction across segmented frame and took care of temporal smoothening which foreground extraction
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3"><a href="https://github.com/rs9899/causal-bandit">Causal Bandit</a></h4>
+                                  Working on various approaches for solving causal bandits, did an extensive comparision and also suggested a new approach that used the causal graph to get lower cummulative regrets
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3"><a href="https://github.com/rs9899/AMLProj">Zero Shot Learning in Scene Graph Generation</a></h4>
+                                  Extended the Scene Graph generation to infinite vocabulary predicate by predicting the target word-embeddings which can then be mapped to the closest word in the Embedding space
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3"><a href="https://github.com/aryanbdps9/VQA2019">VQA : A CS763 Odyssey Computer Vision</a></h4>
+                                  Worked on the existing Visual Question Answering using Deep Learning approach, adding improved Word Embeddings and a side classifier to switch between modules for YES/NO answers and normal answers
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3"><a href="https://github.com/ys1998/edge">EDGE: Efficient Digital Grading Environment Database and Information Systems</a></h4>
+                                  End to End solution for Exam Conduction which given text by instructor, generates question paper in LateX , assign scanned papers to Teaching Assistant for evaluation and provides scores to students
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3"><a href="https://github.com/ys1998/spsim">SPSIM: Superscalar Processor Simulator Computer Architecture</a></h4>
+                                  Built a MIPS Code Simulator from scratch in C++ following a real superscalar microprocessor architecture adding features such as Out-of-order Execution and multiple Processing units for faster execution
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3"><a href="https://github.com/ashish-221b/Get-Sched-Go">GetSchedGo</a></h4>
+                                  Developed a web time table scheduling application using Django with personalisations like events suggestion, smart scheduling, course based events and syncing the result with the Google Calendar
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3">Railway Signalling Controller</h4>
+                                  Programmed a Spartan FPGA Board in VHDL to work as a railway signalling controller along with encrypting the communication between the boards
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+        <!-- jQuery -->
+        <script src="js/jquery.min.js"></script>
+        <!-- jQuery Easing -->
+        <script src="js/jquery.easing.1.3.js"></script>
+        <!-- Bootstrap -->
+        <script src="js/bootstrap.min.js"></script>
+        <!-- Waypoints -->
+        <script src="js/jquery.waypoints.min.js"></script>
+        <!-- Flexslider -->
+        <script src="js/jquery.flexslider-min.js"></script>
+        <!-- Owl carousel -->
+        <script src="js/owl.carousel.min.js"></script>
+        <!-- Counters -->
+        <script src="js/jquery.countTo.js"></script>
+        <!-- MAIN JS -->
+        <script src="js/main.js"></script>
+         <!--canvas js--->
+       <script src="js/canvas.js"></script>
+    </div>
+  </div>
+</body>
+
+</body>
