--- a/Extracurricular.html
+++ b/Extracurricular.html
@@ -1,26 +1,220 @@
-Positions of Responsibility
+<!DOCTYPE HTML>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Extra Curricular</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="Interactive CV of Rupesh" />
+      <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
+      <meta name="author" content="Rupesh" />
+      <!--Social Media icons--> 
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+      <link rel="icon" type="image/png" href="https://rupesh.info/assets/img/favicon.png">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+      <!-- Animate.css -->
+      <link rel="stylesheet" href="css/animate.css">
+      <!-- Bootstrap  -->
+      <link rel="stylesheet" href="css/bootstrap.css">
+      <!-- Flexslider  -->
+      <link rel="stylesheet" href="css/flexslider.css">
+      <!-- Flaticons  -->
+      <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+      <!-- Theme style  -->
+      <link rel="stylesheet" href="css/style.css">
+      <!-- Modernizr JS -->
+      <script src="js/modernizr-2.6.2.min.js"></script>
+       
+       <!--   Google Adsense -->
+<script data-ad-client="ca-pub-5327947672777463" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+   
+</script>
+<!--   End ad -->
 
-Teaching Assistant
-• Data Analysis and Interpretation course under Prof. Ajit Rajwade and Prof. Suyash Awate Ongoing
-• Design and Analysis of Algorithms course under Prof. Bharat Adsul Spring’19
-• Computer Programming and Utilization course under Prof. Varsha Apte Autumn’18
-• Abstractions and Paradigms for Programming course under Prof. Amitabha Sanyal Spring’18
-• Computer Programming and Utilization course under Prof. Umesh Bellur Autumn’17
 
-Department Academic Mentor Ongoing
-◦ Mentoring 6 sophomore students through their Academic transition from 1st year.
+  
+<!-- Google Analytics -->
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+  ga('create', 'UA-147852058-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+</head>
 
-Department Placement Coordinator Ongoing
-◦ Representing Department in Placement Team and guiding the batch through placement procedure.
+<body>
+  <canvas id="canvas"></canvas>
+  <div id="colorlib-page">
+    <div class="container-wrap">
+        <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
+        <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
+           <div class="text-center">
+              <div class="author-img" style="background-image: url(https://rupesh.info/assets/img/profil-smallest.png);">
+              </div>
+              <h1 id="colorlib-logo"><a href="https://rupesh.info/webCV">Rupesh</a></h1>
+              <p><strong>Extra Curricular</strong></p>
+           </div>
+        </aside>
+        <div id="colorlib-main">
+          <section class="colorlib-about" data-section="about">
+            <div class="colorlib-narrow-content">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+                    <div class="col-md-12">
+                      <div class="about-desc">
+                        <h2>Extracurricular Activities</h2>
+                        <hr>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                                <div>
+                                  <ul>
+                                    <li>
+                                      International Rank 18 in the finals of National Science Olympiad, 2014 conducted by SOF
+                                    </li>
+                                    <li>
+                                      Ranked 494 in Round 1C of Google Code Jam , 2019
+                                    </li>
+                                    <li>
+                                      Mentored in Season of Code, 2019, organised by WnCC, IIT Bombay
+                                    </li>
+                                    <li>
+                                      Associated with National Service Scheme, IIT Bombay under Educational Outreach program (2016-17)
+                                    </li>
+                                    <li>
+                                      Black belt in karate under Seigo-Kai Karate-do Association of India
+                                    </li>
+                                    <li>
+                                      Awarded 2nd best project and best demonstrator in Chemistry Department in Biennial Science Exhibition conducted by Ramakrishna Mission Vidyapith, Deoghar, Jharkhand
+                                    </li>
+                                    <li>
+                                      Content Consumption
+                                      <ul>
+                                        <li>130+ movies out of IMDb top 250</li>
+                                        <li>50+ TV Shows out of IMDb top 250</li>
+                                        <li>150+ novels read</li>
+                                      </ul>
+                                    </li>
+                                  </ul>
+                                </div>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div> 
+              <br><br>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+                    <div class="col-md-12">
+                      <div class="about-desc">
+                        <h2>Positions of Responsibility</h2>
+                        <hr>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3">Teaching Assistant</h4>
+                                </div>
+                                <div>
+                                  <ul>
+                                    <li>
+                                      <b>Automata Theory</b> <i>Spring’20</i>
+                                    </li>
+                                    <li>
+                                      <b>Data Analysis and Interpretation</b> <i>Autumn’19</i>
+                                    </li>
+                                    <li>
+                                      <b>Design and Analysis of Algorithms</b> <i>Spring’19</i>
+                                    </li>
+                                    <li>
+                                      <b>Computer Programming and Utilization</b> <i>Autumn’18</i>
+                                    </li>
+                                    <li>
+                                      <b>Abstractions and Paradigms for Programming</b> <i>Spring’18</i>
+                                    </li>
+                                    <li>
+                                      <b>Computer Programming and Utilization</b> <i>Autumn’17</i>
+                                    </li>
+                                  </ul>
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3">Department Academic Mentor</h4>
+                                  ◦ Mentoring 6 sophomore students through their Academic transition from 1st year.
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3">Department Placement Coordinator</h4>
+                                  ◦ Representing Department in Placement Team and guiding the batch through placement procedure.
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+        <!-- jQuery -->
+        <script src="js/jquery.min.js"></script>
+        <!-- jQuery Easing -->
+        <script src="js/jquery.easing.1.3.js"></script>
+        <!-- Bootstrap -->
+        <script src="js/bootstrap.min.js"></script>
+        <!-- Waypoints -->
+        <script src="js/jquery.waypoints.min.js"></script>
+        <!-- Flexslider -->
+        <script src="js/jquery.flexslider-min.js"></script>
+        <!-- Owl carousel -->
+        <script src="js/owl.carousel.min.js"></script>
+        <!-- Counters -->
+        <script src="js/jquery.countTo.js"></script>
+        <!-- MAIN JS -->
+        <script src="js/main.js"></script>
+         <!--canvas js--->
+       <script src="js/canvas.js"></script>
+    </div>
+  </div>
+</body>
 
-<br> 
-
-Extracurricular Activities
-
-
-• Ranked 494 in Round 1C of Google Code Jam , 2019 (2019)
-• Mentored in Season of Code, 2019, organised by WnCC, IIT Bombay (2019)
-• Associated with National Service Scheme, IIT Bombay under Educational Outreach program (2016-17)
-• Black belt in karate under Seigo-Kai Karate-do Association of India (2014)
-• Awarded 2nd best project and best demonstrator in Chemistry Department in Biennial Science
-Exhibition conducted by Ramakrishna Mission Vidyapith, Deoghar, Jharkhand (2013)
+</body>
