--- a/Research.html
+++ b/Research.html
@@ -1,12 +1,166 @@
-3D Reconstruction in Cryogenic Electron Microscopy Ongoing
-Research and Development Project under Prof. Ajit Rajwade
-• Improving on the earlier work by adding an additional freedom of translation in the input data.
-• Running the framework on real world data after proper denoising and contrast correction.
-Auto Tuning Spark Applications on a Kubernetes cluster Autumn 2018
-BTech Project under Prof. Umesh Bellur
-• Developed a framework to output resource consumption for input set of configurational parameters.
-• Generated more analytical data for further analysis in configurational parameters optimisation.
-Neural Network for Image Processing Spring 2018
-Research and Development Project under Prof. Suyash Awate
-• Single image super-resolution using neural network following the ideas of EnhanceNet
-• Experimented with conversion of images to sequence models for application of LSTM cells
+<!DOCTYPE HTML>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Research Projects</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="Interactive CV of Rupesh" />
+      <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
+      <meta name="author" content="Rupesh" />
+      <!--Social Media icons--> 
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+      <link rel="icon" type="image/png" href="https://rupesh.info/assets/img/favicon.png">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+      <!-- Animate.css -->
+      <link rel="stylesheet" href="css/animate.css">
+      <!-- Bootstrap  -->
+      <link rel="stylesheet" href="css/bootstrap.css">
+      <!-- Flexslider  -->
+      <link rel="stylesheet" href="css/flexslider.css">
+      <!-- Flaticons  -->
+      <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+      <!-- Theme style  -->
+      <link rel="stylesheet" href="css/style.css">
+      <!-- Modernizr JS -->
+      <script src="js/modernizr-2.6.2.min.js"></script>
+       
+       <!--   Google Adsense -->
+<script data-ad-client="ca-pub-5327947672777463" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+   
+</script>
+<!--   End ad -->
+
+
+  
+<!-- Google Analytics -->
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+  ga('create', 'UA-147852058-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+</head>
+
+<body>
+  <canvas id="canvas"></canvas>
+  <div id="colorlib-page">
+    <div class="container-wrap">
+        <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
+        <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
+           <div class="text-center">
+              <div class="author-img" style="background-image: url(https://rupesh.info/assets/img/profil-smallest.png);">
+              </div>
+              <h1 id="colorlib-logo"><a href="https://rupesh.info/webCV">Rupesh</a></h1>
+              <p><strong>Research Projects</strong></p>
+           </div>
+        </aside>
+        <div id="colorlib-main">
+          <section class="colorlib-about" data-section="about">
+            <div class="colorlib-narrow-content">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+                    <div class="col-md-12">
+                      <div class="about-desc">
+                        <h2>Research Projects</h2>
+                        <hr>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3">Handling Heterogeneity in Cryogenic Electron Microscopy</h4>
+                                  <b>Under Prof. Ajit Rajwade</b> <i>2019-20</i>
+                                  <ul>
+                                    <li>Moment based approach for classification of microscopic projections</li>
+                                    <li>CNN models in the cases where we have 100-200 labelled projections</li>
+                                    <li>Stochastic selection of particles followed by iterative improvement of angle-estimates</li>
+                                  </ul>
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3">Auto Tuning Spark Applications on a Kubernetes cluster</h4>
+                                  <b>Under Prof. Umesh Bellur</b> <i>Autumn 2018</i>
+                                  <ul>
+                                    <li>Developed a framework to output resource consumption for input set of configurational parameters</li>
+                                    <li>Generated more analytical data for further analysis in configurational parameters optimisation</li>
+                                  </ul>
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                        <div class="col-md-12">
+                          <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                            <br>
+                            <ul class="fa-ul mb-0">
+                              <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInRight"> -->
+                              <li>
+                                <i class="fa-li fa fa-check"></i>
+                                <div>
+                                  <h4 class="mb-3">Single Image Super Resolution</h4>
+                                  <b>Under Prof. Suyash Awate</b> <i>Spring 2018</i>
+                                  <ul>
+                                    <li>Single image super-resolution using neural network following the ideas of EnhanceNet</li>
+                                    <li>Experimented with conversion of images to sequence models for application of LSTM cells</li>
+                                  </ul>
+                                </div>
+                              </li>
+                            </ul>
+                          </article>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+
+        <!-- jQuery -->
+        <script src="js/jquery.min.js"></script>
+        <!-- jQuery Easing -->
+        <script src="js/jquery.easing.1.3.js"></script>
+        <!-- Bootstrap -->
+        <script src="js/bootstrap.min.js"></script>
+        <!-- Waypoints -->
+        <script src="js/jquery.waypoints.min.js"></script>
+        <!-- Flexslider -->
+        <script src="js/jquery.flexslider-min.js"></script>
+        <!-- Owl carousel -->
+        <script src="js/owl.carousel.min.js"></script>
+        <!-- Counters -->
+        <script src="js/jquery.countTo.js"></script>
+        <!-- MAIN JS -->
+        <script src="js/main.js"></script>
+         <!--canvas js--->
+       <script src="js/canvas.js"></script>
+    </div>
+  </div>
+</body>
+
+</body>
