--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(https://rupesh.info/assets/img/profil-smallest.png);"></div>
-                  <h1 id="colorlib-logo"><a href="https://rupesh.info/">Rupesh</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://rupesh.info/webCV">Rupesh</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
